--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,15 +1,9 @@
 {
     "version": 2,
-    "builds": [
-        {
-            "src": "./index.js",
-            "use": "@vercel/node"
-        }
-    ],
     "routes": [
-        {
-            "src":"/(.*)",
-            "dest":"/"
-        }
+      { "handle": "filesystem" },
+      { "src": "/api/(.*)", "dest": "/server/api/$1" },
+      { "src": "/(.*)", "dest": "/server/index.js" }
     ]
-}
+  }
+  
