--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "build": "exit 0"
+    "build": "echo \"Building server...\""
   },
   "keywords": [],
   "author": "",
