--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,9 +1,16 @@
 {
-    "version": 2,
-    "routes": [
-      { "handle": "filesystem" },
-      { "src": "/api/(.*)", "dest": "/server/api/$1" },
-      { "src": "/(.*)", "dest": "/server/index.js" }
-    ]
-  }
-  
+  "version": 2,
+  "builds": [
+   {
+    "src": "index.js",
+    "use": "@vercel/node",
+    "config": { "includeFiles": ["dist/**"] }
+   }
+  ],
+  "routes": [
+   {
+    "src": "/(.*)",
+    "dest": "index.js"
+   }
+  ]
+ }
